# paper_rock_scissors

./: meson.build  readme.md
.github/workflows/: code_linter.yml
modules/code/: meson.build  messages.c  project.c  project.h  utility.c
modules/main/: main.c  meson.build
modules/test/: test_cases.c  test_runner.c
